<resources>
    <string name="app_name">Unguided8_F_9618</string>

    <string name="gd">UNGUIDED WEB API</string>
    <string name="welcome">Selamat datang di Unguided Modul 8 Web API Retrofit</string>
    <string name="create">Create User</string>
    <string name="edit">Edit User</string>
    <string name="show">Show List User</string>
    <string name="hNama">Nama</string>
    <string name="hNim">Nim</string>
    <string name="hProdi">Prodi</string>
    <string name="hFakultas">Fakultas</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="hPass">Password</string>
    <string name="btnCancel">CANCEL</string>
    <string name="btnCreate">CREATE</string>
    <string name="hSearch">Search User</string>
    <string name="detail">Detail User</string>
    <string name="login">LOGIN</string>
    <string name="profil">MY PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="btnDelete">DELETE</string>
    <string name="btnEdit">EDIT</string>
    <string name="btnUpdate">UPDATE</string>
</resources>