<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ScrollView
        android:layout_below="@+id/navbar"
        android:layout_above="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            layout_below="+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/twNama"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/hNama">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etNama"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/twNim"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/hNim">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etNim"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ddProdi"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp">
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edProdi"
                        android:hint="@string/hProdi"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ddFakultas"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp">
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edFakultas"
                        android:hint="@string/hFakultas"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jk"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rgJenisKelamin"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/rbLakiLaki"
                        android:layout_marginRight="20dp"
                        android:checked="true"
                        android:text="@string/laki"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/rbPerempuan"
                        android:text="@string/perempuan"/>
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/twPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/hPass">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etPassword"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:text="@string/btnCancel"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/pink"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreate"
            android:text="@string/btnCreate"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/choco"/>

    </RelativeLayout>

</RelativeLayout>