<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/detail"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibClose"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_baseline_close_24"
            android:foreground="?android:attr/selectableItemBackground"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:text="@string/hNama"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/twNama"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/hNama"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:text="@string/hNim"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/twNim"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/hNim"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:text="@string/hFakultas"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/twFakultas"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/hFakultas"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:text="@string/hProdi"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/twProdi"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/hProdi"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:text="@string/jk"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/twJenisKelamin"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-1dp"
                            android:hint="@string/jk"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="20dp"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>